--- a/templates/manager/appointments.html.twig
+++ b/templates/manager/appointments.html.twig
@@ -42,6 +42,9 @@
                 <a href="{{ path('manager_appointments') }}" class="btn btn-primary active">
                     <i class="fas fa-calendar-alt"></i> {{ 'appointments.nav_all' | trans }}
                 </a>
+                <a href="{{ path('manager_barber_schedules') }}" class="btn btn-outline-primary">
+                    <i class="fas fa-user-clock"></i> Графици на бръснари
+                </a>
             </div>
         </div>
     </div>
@@ -183,7 +186,7 @@
                     <h5><i class="fas fa-list"></i> {{ 'appointments.table.title' | trans }}</h5>
                     <div>
                         <label class="mb-0 mr-2">{{ 'appointments.table.show' | trans }}:</label>
-                        <select class="form-control form-control-sm d-inline-block" style="width: auto;" onchange="changePerPage(this.value)">
+                        <select class="form-control form-control-sm d-inline-block" onchange="changePerPage(this.value)">
                             <option value="10" {{ perPage == 10 ? 'selected' : '' }}>10</option>
                             <option value="20" {{ perPage == 20 ? 'selected' : '' }}>20</option>
                             <option value="50" {{ perPage == 50 ? 'selected' : '' }}>50</option>
