--- a/templates/registration/check_email.html.twig
+++ b/templates/registration/check_email.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %}{{ 'check_email.title' | trans }}{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/registration.css') }}">
+{% endblock %}
+
 {% block body %}
     <!--? Hero Start -->
     <div class="slider-area2">
@@ -25,8 +30,8 @@
             <div class="row justify-content-center">
                 <div class="col-xl-8 col-lg-10 col-md-12">
                     <div class="check-email-card">
-                        <div class="icon-wrapper text-center mb-4">
-                            <i class="fas fa-envelope-open-text" style="font-size: 80px; color: #d4a024;"></i>
+                        <div class="icon-wrapper text-center mb-4 email-icon">
+                            <i class="fas fa-envelope-open-text"></i>
                         </div>
 
                         <h3 class="text-center mb-4">{{ 'check_email.heading' | trans }}</h3>
@@ -34,7 +39,7 @@
                         <div class="alert alert-info">
                             <p class="mb-3">
                                 <strong>{{ 'check_email.sent_to' | trans }}</strong><br>
-                                <span style="font-size: 18px; color: #2c3e50;">{{ email }}</span>
+                                <span class="email-display">{{ email }}</span>
                             </p>
                             {{ 'check_email.instructions' | trans }}
                         </div>
